test/corpus/instr_and_reg.test
==========
Instruction -- No args
==========
MOVLPS
---
(program
    (instruction kind: (op)))

==========
Instruction -- One reg arg
==========
pushq %rbp
---
(program
      (instruction
            kind: (op)
            (ident (reg))))

==========
Instruction -- Two reg args
==========
pushq %rbp, %rbp
---
(program
      (instruction
            kind: (op)
            (ident (reg))
            (ident (reg))))

==========
Instruction -- Pointer offset arg, reg arg
==========
movzbl	-1(%rbp), %eax
---
(program
    (instruction
        kind: (op)
        (ptr
            (int)
            (reg))
        (ident (reg))))

==========
Instruction -- Integer immediate arg, reg arg (GAS x86)
==========
andl	$15, %eax
---
(program
    (instruction
        kind: (op)
        (int)
        (ident (reg))))

==========
Instruction -- Reg arg, Integer immediate arg (ARM A64)
==========
mov X10, #1
---
(program
    (instruction
        (op)
        (ident
            (reg
                (word)))
        (int)))


==========
Instruction -- Reg arg, reg arg, address pointer with register and negative integer immediate arg, followed by exclmation mark (ARM A64)
==========
stp w0, w1, [sp, #-16]!
---
(program
  (instruction
    (op)
    (ident
      (reg
        (word)))
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (int))))


==========
Instruction -- Reg arg, address pointer with register and integer immediate arg (ARM A64)
==========
ldr x8, [sp, #8]
---
(program
  (instruction
    (op)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (int))))

==========
Instruction -- Reg arg, address pointer with register only (ARM A64)
==========
ldr x8, [sp]
---
(program
  (instruction
    (op)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word)))))

==========
Instruction -- Reg arg, section address arg (ARM A64)
==========
adr X1, helloworld
---
(program
    (instruction
        (op)
        (ident
            (reg
                (word)))
         (ident
              (reg
              (word)))))

==========
Instruction -- List of registers with range (ARMv7)
==========
PUSH { V1, V2, V3-V5, LR }
---
(program
  (instruction
    (op)
    (list
      (reg
        (word))
      (reg
        (word))
      (reg
        (word))
      (reg
        (word))
      (reg
        (word)))))

==========
Instruction -- Section address arg, reg arg (GAS x86)
==========
mov $msg, %ecx
---
(program
    (instruction
        (op)
        (ident
            (reg
                (address)))
         (ident
              (reg))))

==========
Instruction -- Dotted label arg
==========
jne	.L5
---
(program
    (instruction
        kind: (op)
        (ident)))

==========
Instruction -- Reg arg, address arg (ARMv7)
==========
LDR A1, =addr
---
(program
  (instruction
    (op)
    (ident
      (reg
        (word)))
    (ident
      (reg
        (address)))))

==========
Instruction -- Instruction with dot in the middle (RVV)
==========
vse32.v v8, (a2)
---
(program
  (instruction
    kind: (op)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word)))))
==========
Instruction -- Instruction with mask flag (RVV)
==========
vle32 v4, (a3), v0.t
---
(program
  (instruction
    (op)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word)))
    (ident
      (reg
        (flag)))))
